# cloverleaf_openmp_target

./: CMakeLists.txt  README.md
src/: PdV.cpp  accelerate.cpp  advec_cell.cpp  advec_mom.cpp  build_field.cpp  calc_dt.cpp  clover_leaf.cpp  comms.cpp  comms.h  definitions.h  field_summary.cpp  finalise_field.cpp  finalise_field.h  flux_calc.cpp  generate_chunk.cpp  hydro.cpp  ideal_gas.cpp  initialise.cpp  initialise_chunk.cpp  pack_kernel.cpp  pack_kernel.h  reset_field.cpp  revert.cpp  start.cpp  start.h  timestep.cpp  update_halo.cpp  update_tile_halo.cpp  update_tile_halo_kernel.cpp  update_tile_halo_kernel.h  utils.hpp  viscosity.cpp  visit.cpp
